--- a/app/config.json
+++ b/app/config.json
@@ -4,6 +4,7 @@
   "disciplines": ["Developer", "Game Tester", "Data Analyst"],
   "url": "https://github.com",
   "twitter": "@aivenpromedia",
+  "linkedin": "in/marco-ivan-nava-pinedo",
   "figma": "@IvanNava",
   "github": "moonshinerlax",
   "repo": "https://github.com/",
