--- a/app/config.json
+++ b/app/config.json
@@ -7,6 +7,6 @@
   "linkedin": "in/marco-ivan-nava-pinedo",
   "figma": "@IvanNava",
   "github": "moonshinerlax",
-  "repo": "https://github.com/",
+  "repo": "https://github.com/moonshinerlax/Aiven-Portfolio.git",
     "ascii": "          _                 \n     /\\   (_)                \n    /  \\   ___   _____ _ __  \n   / /\\ \\ | \\ \\ / / _ \\ '_ \\ \n  / ____ \\| |\\ V /  __/ | | |\n /_/    \\_\\_| \\_/ \\___|_| |_|\n                             \n                             "
   }
