--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "portfolio",
-  "homepage": "https://hamishw.com",
+  "homepage": "https://ivannava.com",
   "description": "Portfolio site for Hamish Williams",
-  "repository": "https://github.com/HamishMW/portfolio.git",
-  "author": "Hamish Williams",
+  "repository": "https://github.com/moonshinerlax/Aiven-Portfolio.git",
+  "author": "Ivan Nava",
   "sideEffects": false,
   "type": "module",
   "scripts": {
