--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Hamish Williams",
-  "name": "Design Portfolio of Hamish Williams",
+  "short_name": "Ivan Nava",
+  "name": "Design Portfolio of Ivan Nava",
   "icons": [
     {
       "src": "shortcut.png",
