--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,19 @@
-[build]
-publish = "out"
+`[build]
+command = "npm run build"
+publish = "/build"
+base = "/"
+
+[[redirects]]
+from = "/api/*"
+to = "/.netlify/functions/:splat"
+status = 200
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+[[plugins]]
+package = "@netlify/plugin-functions-install-core"`
 
 [build.environment]
 NETLIFY_NEXT_PLUGIN_SKIP = "true"
