--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@ from = "/*"
 to = "/index.html"
 status = 200
 [[plugins]]
-package = "@netlify/plugin-functions-install-core"`
+package = "@netlify/plugin-functions-install-core"
 
 [build.environment]
 NETLIFY_NEXT_PLUGIN_SKIP = "true"
