--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@ base = "/"
 from = "/api/*"
 to = "/.netlify/functions/:splat"
 status = 200
-from = "/*"
+from = "/"
 to = "/index.html"
 status = 200
 
