--- a/netlify.toml
+++ b/netlify.toml
@@ -4,10 +4,7 @@ publish = "/build"
 base = "/"
 
 [[redirects]]
-from = "/api/*"
-to = "/.netlify/functions/:splat"
-status = 200
-from = "/"
+from = "/*"
 to = "/index.html"
 status = 200
 
