--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,14 @@ command = "npm run build"
 publish = "/build"
 base = "/"
 
-[[plugins]]
-package = "@netlify/plugin-functions-install-core"
+[[redirects]]
+from = "/api/*"
+to = "/.netlify/functions/:splat"
+status = 200
 
-[build.environment]
-NETLIFY_NEXT_PLUGIN_SKIP = "true"
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
+
