--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "portfolio",
-  "homepage": "https://ivannava.com",
-  "description": "Portfolio site for Hamish Williams",
-  "repository": "https://github.com/moonshinerlax/Aiven-Portfolio.git",
+  "name": "moonshinerlax-github-io",
+  "homepage": "https://moonshinerlax-github-io.pages.dev/",
+  "description": "Portfolio site for Ivan Nava",
+  "repository": "https://github.com/moonshinerlax/moonshinerlax.github.io.git",
   "author": "Ivan Nava",
   "sideEffects": false,
   "type": "module",
@@ -11,10 +11,10 @@
     "dev": "node ./scripts/dev.cjs && remix vite:dev",
     "start": "wrangler pages dev ./build/client",
     "postinstall": "node ./scripts/draco.cjs",
-    "deploy": "npm run build && wrangler pages deploy ./build/client --project-name portfolio",
+    "deploy": "npm run build && wrangler pages deploy ./build/client --project-name moonshinerlax-github-io",
     "dev:storybook": "storybook dev -p 6006",
     "build:storybook": "storybook build",
-    "deploy:storybook": "wrangler pages deploy ./storybook-static --project-name portfolio-storybook --branch main"
+    "deploy:storybook": "wrangler pages deploy ./storybook-static --project-name moonshinerlax-github-io-storybook --branch main"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.515.0",
